get rid of some more usages of getMetamodel()